# campus

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  lefthook.yml
.claude/: settings.json
.claude/skills/: linear-plan  plan-phase-executor
.github/hooks/: hooks.json
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  dependencies.py  main.py
backend/app/domain/models/: offering.py  progress.py
backend/app/domain/repositories/: catalog_repo.py  progress_repo.py
backend/app/domain/services/: catalog_service.py  progress_service.py
backend/app/infrastructure/auth/: jwt_bearer.py
backend/app/infrastructure/persistence/: pg_catalog_repo.py  pg_progress_repo.py
backend/app/infrastructure/routers/: catalog.py  progress.py
backend/tests/: conftest.py  test_catalog.py  test_progress.py
database/: README.md
database/docs/: data-model.md
database/migrations/: 001_add_auth_user_id_to_core_client.sql  002_create_ed_content.sql  003_create_ed_content_progress.sql  004_enable_rls_campus.sql  005_drop_ed_content_progress.sql  006_sessions_content_link.sql
database/schema/: baseline.sql
database/seeds/: seed.sql
docs/: architecture.md  business.md  development.md  target-user.md
docs/adrs/: adr-001-self-hosted-supabase-auth.md  (+3 more)
frontend/: DESIGN.md  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/src/: proxy.ts  (+1 more)
infra/: Caddyfile  docker-compose.prod.yml  init-auth-password.sh  kong.yml  setup-server.sh
(+24 files in other folders)
